project structure changed

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <div class="rotate">
                     <label class="title">Rotate and Flip</label>
                     <div class="options">
-                        <button id="left"><img src="../assets/img/left-rotate.png" class="leftpic"> </img><i
+                        <button id="left"><img src="./assets/img/left-rotate.png" class="leftpic"> </img><i
                                 class="w3-button w3-left"></i></button>
-                        <button id="right"><img src="../assets/img/right-rotate.png" class="rightpic"> </img><i
+                        <button id="right"><img src="./assets/img/right-rotate.png" class="rightpic"> </img><i
                                 class="w3-button w3-right"></i></button>
 
                         <button id="vertical"><i class="bx bx-reflect-vertical"></i></button>
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="preview-img">
-                <img src="../assets/img/photo.png" alt="preview-img">
+                <img src="./assets/img/photo.png" alt="preview-img">
             </div>
 
         </div>
